@@ -107,6 +107,39 @@ public class FileUtils {
 
     //-----------------------------------------------------------------------
     /**
+     * Opens a {@link FileOutputStream} for the specified file, checking and
+     * creating the parent directory if it does not exist.
+     * <p>
+     * At the end of the method either the stream will be successfully opened,
+     * or an exception will have been thrown.
+     * <p>
+     * The parent directory will be created if it does not exist.
+     * The file will be created if it does not exist.
+     * An exception is thrown if the file object exists but is a directory.
+     * An exception is thrown if the parent directory cannot be created.
+     * 
+     * @param file  the file to create, not null
+     * @throws IOException if the file object is a directory
+     * @throws IOException if a parent directory needs creating but that fails
+     */
+    public static FileOutputStream openOutputStream(File file) throws IOException {
+        if (file.exists()) {
+            if (file.isDirectory()) {
+                throw new IOException("File '" + file + "' exists but is a directory");
+            }
+        } else {
+            File parent = file.getParentFile();
+            if (parent.exists() == false) {
+                if (parent.mkdirs() == false) {
+                    throw new IOException("File '" + file + "' could not be created");
+                }
+            }
+        }
+        return new FileOutputStream(file);
+    }
+
+    //-----------------------------------------------------------------------
+    /**
      * Returns a human-readable version of the file size, where the input
      * represents a specific number of bytes.
      *
