@@ -102,6 +102,9 @@ Enhancements from 1.2
   - wildcardMatch - new method that has IOCase as a parameter
   - equals - new method that has IOCase as a parameter
 
+- FileUtils.openOutputStream  [IO-107]
+  - new method to open a FileOutputStream, creating parent directories if required
+
 - FileUtils.isFileOlder
   - add methods to check if a file is older (i.e. isFileOlder()) - counterparts
     to the existing isFileNewer() methods.
